2019-07-17  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/mailbox_maildir.c
	(libbalsa_mailbox_maildir_fetch_message_structure): do not unref
	a NULL GMimeMessage.

2019-07-17  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/gmime-part-rfc2440.c (g_mime_part_check_rfc2440): use
	g_str_has_prefix() instead of strncmp().

2019-07-16  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mime-stream-shared: Use modern macros to declare and define.

	* libbalsa/mime-stream-shared.c: Use G_DEFINE_TYPE();
	(libbalsa_mime_stream_shared_class_init): do not handle
	parent_class;
	(libbalsa_mime_stream_shared_init): new stub, required by
	G_DEFINE_TYPE();
	(lbmss_lock_new): do not ref-count locks;
	(lbmss_finalize): use GMimeStreamFs::owner to decide when to
	free the lock;
	(lbmss_stream_read), (lbmss_stream_write),
	(lbmss_stream_reset), (lbmss_stream_seek),
	(lbmss_stream_substream), (libbalsa_mime_stream_shared_new):
	parent class stuff;
	(libbalsa_mime_stream_shared_lock),
	(libbalsa_mime_stream_shared_unlock): cosmetics;
	* libbalsa/mime-stream-shared.h: Use G_DECLARE_FINAL_TYPE().

2019-07-15  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix some Valgrind-detected issues

	* libbalsa/filter-file.c (libbalsa_mailbox_filters_load_config):
	initialize LibBalsaMailboxFilter::when;
	* libbalsa/mailbox.c (libbalsa_mailbox_finalize): clear the
	GRecMutex;
	* libbalsa/mailbox_imap.c (libbalsa_mailbox_imap_load_envelope):
	do not leak an InternetAddressList;
	(get_struct_from_cache): do not leak GMimeMessage;
	* libbalsa/send.c (lbs_message_queue_real): ref the GMimeMessage
	to preserve it, and then unref it.

2019-07-13  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-message: Pass message headers to disposition-notify handler

	* src/balsa-message.c (balsa_message_set), (handle_mdn_request):

2019-07-11  Peter Bloomfield  <pbloomfield@bellsouth.net>

	message: Declare it final

	Use G_DECLARE_FINAL_TYPE to declare LibBalsaMessage, make it