@@ -1,6 +1,6 @@
 /* -*-mode:c; c-style:k&r; c-basic-offset:4; -*- */
 /* Balsa E-Mail Client
- * Copyright (C) 1997-2016 Stuart Parmenter and others,
+ * Copyright (C) 1997-2019 Stuart Parmenter and others,
  *                         See the file AUTHORS for a list.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -23,50 +23,14 @@
 #include <gtk/gtk.h>
 #include <libbalsa.h>
 
-#define BALSA_TYPE_AB_WINDOW            (balsa_ab_window_get_type ())
-#define BALSA_AB_WINDOW(obj)            (G_TYPE_CHECK_INSTANCE_CAST ((obj), BALSA_TYPE_AB_WINDOW, BalsaAbWindow))
-#define BALSA_AB_WINDOW_CLASS(klass)    (G_TYPE_CHECK_CLASS_CAST ((klass), BALSA_TYPE_AB_WINDOW, BalsaAbWindowClass))
-#define BALSA_IS_AB_WINDOW(obj)         (G_TYPE_CHECK_INSTANCE_TYPE ((obj), BALSA_TYPE_AB_WINDOW))
-#define BALSA_IS_AB_WINDOW_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE ((klass), BALSA_TYPE_AB_WINDOW))
+#define BALSA_TYPE_AB_WINDOW (balsa_ab_window_get_type())
 
+G_DECLARE_FINAL_TYPE(BalsaAbWindow,
+                     balsa_ab_window,
+                     BALSA,
+                     AB_WINDOW,
+                     GtkDialog)
 
-typedef struct _BalsaAbWindow BalsaAbWindow;
-typedef struct _BalsaAbWindowClass BalsaAbWindowClass;
-
-struct _BalsaAbWindow 
-{
-    GtkDialog parent;
-
-    /* Are we composing? */
-    gboolean composing;
-
-    /* The current address book */
-    LibBalsaAddressBook *current_address_book;
-
-    /* the filter entry */
-    GtkWidget *filter_entry;
-
-    /* The address list */
-    GtkWidget *address_list;
-
-    /* The send to list */
-    GtkWidget *recipient_list;
-
-    /* Radio buttons for dist list mode */
-    GtkWidget *single_address_mode_radio;
-    GtkWidget *dist_address_mode_radio;
-    guint      toggle_handler_id;
-
-    /* Stuff to hide when not in compose mode */
-    GtkWidget *send_to_label;
-    GtkWidget *send_to_list;
-    GtkWidget *arrow_box;
-
-    /* The address book list */
-    GtkWidget *combo_box;
-};
-
-GType balsa_ab_window_get_type(void);
 GtkWidget *balsa_ab_window_new(gboolean composing, GtkWindow* parent);
 
 gchar *balsa_ab_window_get_recipients(BalsaAbWindow *ab);
