@@ -1,3 +1,10 @@
+2019-07-18  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	ab-window: Use modern macros to declare and define.
+
+	* src/ab-window.c: use G_DEFINE_TYPE();
+	* src/ab-window.h: use G_DECLARE_FINAL_TYPE().
+
 2019-07-17  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	* libbalsa/mailbox_maildir.c
